no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -877,7 +877,7 @@ go generate IMPORT_PATHS          #Execute any COMMAND from //go:generate commen
 
                                              /=+===============================+=\
                                             /  :                               :  \
-                                            )==:             TEST              :==(
+                                            )==:            GO TEST            :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
 
@@ -907,4 +907,89 @@ go test [IMPORT_PATHS] [ARG...]   #Runs:
 -json                             #Prints test results as JSON
 -ANY_GO_RUN_FLAG                  #Note: -i implied -c
 
+-bench [Benchmark]NAME            #Run a benchmark function
+
+-cpu NUM                          #Set GOMAXPROCS
+
 testdata/**                       #Always ignored, i.e. good for fixtures
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:          TEST FILES           :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+TEST FILES ==>                    #Must export Test*|Example*|Benchmark*()
+                                  #Each FUNC is run in its own goroutine
+
+TestNAME(*testing.T)              #Test function
+                                  #If any test assertion fails, exit code 1
+
+Example[VARR][_SUFFIX]()          #Example function
+                                  #Can become a test function (instead of documenting) by adding a comment asserting stdout equals a specific STR
+                                  #Documented by godoc:
+                                  #  - VARR should be exported variable name, _-separated
+                                  #     - empty if whole package
+                                  #  - appears next to VARR documentation
+                                  #  - can append any SUFFIX
+                                  #  - if only one Example function, and there are some package scope declaration, the whole
+                                  #    file is shown, not only function
+                                  #     - i.e. full file example
+// Output: [...]                  #... is expected stdout
+                                  #Can be multiline, omitting "Output:"
+// Unordered output: [...]        #Same but line order is not significant
+
+BenchmarkNAME(*testing.B)         #Benchmark function
+                                  #Only run when -bench CLI flag
+                                  #Prints GOOS, GOARCH, MODULE_PATH, NAME
+                                  #Runs for one minute then prints:
+                                  #  - number of iterations
+                                  #  - average iteration speed
+                                  #  - number of goroutines
+                                  #Can also use test assertions, and behave like a test function
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:            TESTING            :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+import "testing"                  #
+
+T                                 #Test function utilities
+T.Fail()                          #Mark test as failed. Keep current FUNC|goroutine going.
+T.Failed()->BOOL                  #
+T.FailNow()                       #Run T.Fail(), then exit current FUNC|goroutine (not others)
+
+T.SkipNow()                       #Mark test as skipped, then exit current FUNC|goroutine (not others)
+T.Skipped()->BOOL                 #
+
+T.Log[f](...)                     #Similar to fmt.Println|Printf(...) except more test-friendly:
+                                  #  - only printed on test failure or if -v CLI flag
+T.Error[f](...)                   #Run T.Log[f](...) then t.Fail()
+T.Fatal[f](...)                   #Run T.Log[f](...) then t.FailNow()
+T.Skip[f](...)                    #Run T.Log[f](...) then t.SkipNow()
+
+T.Cleanup(FUNC())                 #Run FUNC() when test exits.
+                                  #Last added is called first.
+
+T.Name()->"TestNAME"              #
+
+T.Helper()                        #Make function as test helper, i.e. file|line information not printed
+
+T.Parallel()                      #Mark as parallel test, i.e. run in parallel with other parallel tests
+
+T.Run("NAME2", FUNC(*T))->BOOL    #Runs a sub-test, for nesting|grouping tests.
+                                  #Done in a goroutine.
+                                  #Blocks until complete (unless parallel)
+                                  #BOOL is whether failed
+                                  #  - if parallel, until T.Parallel() was called
+
+B                                 #Benchmark utilities
+B.ResetTimer()                    #To do after setup code, so the setup does not add to the benchmark
+
+TB                                #INTERFACE with methods common to T and B
