no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -960,7 +960,7 @@ BenchmarkNAME(*testing.B)         #Benchmark function
 
 import "testing"                  #
 
-T                                 #Test function utilities
+testing.T                         #Test function utilities
 T.Fail()                          #Mark test as failed. Keep current FUNC|goroutine going.
 T.Failed()->BOOL                  #
 T.FailNow()                       #Run T.Fail(), then exit current FUNC|goroutine (not others)
@@ -989,7 +989,40 @@ T.Run("NAME2", FUNC(*T))->BOOL    #Runs a sub-test, for nesting|grouping tests.
                                   #BOOL is whether failed
                                   #  - if parallel, until T.Parallel() was called
 
-B                                 #Benchmark utilities
-B.ResetTimer()                    #To do after setup code, so the setup does not add to the benchmark
 
-TB                                #INTERFACE with methods common to T and B
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:           BENCHMARK           :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+testing.B                         #Benchmark utilities
+
+B.*                               #All T.* are available
+                                  #  - exception: logs are always printed
+testing.TB                        #INTERFACE with methods common to T and B
+
+B.N                               #Max iteration INT to run in loops
+                                  #For example: for i := 0; i < b.N; i++ {...}
+
+B.ResetTimer()                    #To do after setup code, so the setup does not add to the benchmark
+B.StopTimer()                     #Pause timer
+B.StartTimer()                    #Re-start timer
+
+B.ReportAllocs()                  #Like -test.benchmem, but only for this function
+
+B.SetBytes(INT64)                 #Report that the current test read or write INT64 bytes by current iteration, to benchmark I/O
+                                  #This will be printed as MB/s in the test output.
+B.ReportMetric(FLOAT64, "UNIT")   #Report "FLOAT64 UNIT" in test output
+                                  #Must be called only once per FUNC
+                                  #Goal is to do own measuring and report it
+                                  #If "UNIT" is already reported by go test, override it
+
+B.SetParallelism(INT)             #Increase the number of max goroutines to INT * GOMAXPROCS
+B.RunParallel(FUNC(*PB))          #Creates GOMAXPROCS goroutines and run all goroutines in parallel.
+                                  #I.e. benchmarks in parallel instead of serially
+                                  #Blocks until complete
+PB.Next()->BOOL                   #Mark start of a new iteration
+                                  #Returns false if last iteration.
+                                  #To use in: for PB.Next() {...}
