no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -7,6 +7,10 @@
 
 VERSION ==>                       #See Go language
 
+DOCUMENTED ELSEWHERE ==>          #In go testing:
+                                  #  - go test
+                                  #  - go tool cover
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -873,156 +877,3 @@ go generate IMPORT_PATHS          #Execute any COMMAND from //go:generate commen
  COMMAND [ARGS...]                #Means if another //go:generate uses ALIAS as COMMAND, it will be expanded to COMMAND [ARGS...]
 
 // Code generated ... DO NOT EDIT.#By convention, this comment should be before any modifications done by go generate
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:            GO TEST            :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-go test [IMPORT_PATHS] [ARG...]   #Runs:
-                                  #  - go vet
-                                  #     - only bools|nilfunc|atomic|printf|buildtag RULEs
-                                  #  - go build, but including also *_test.go
-                                  #  - executes resulting TEST_BINARY
-                                  #  - prints test summary
-                                  #     - to stdout (redirects any stderr to stdout instead)
-                                  #ARG... are passed to TEST_BINARY
-                                  #  - any go test flag can be set after IMPORT_PATHS too, so should not be any conflicts
-                                  #     - to distinguish, can prepend -args to ARG...
-                                  #TEST_BINARY includes the source BINARY
-                                  #If IMPORT_PATHS is omitted:
-                                  #  - current PACKAGE
-                                  #  - no caching
-                                  #  - imply -v
-                                  #Executing TEST_BINARY is cached
-                                  #  - if files or CLI flags changed, not cached
-                                  #  - convention to disable caching: using -count=1
--vet=off                          #Do not run go vet
--c                                #Do not execute TEST_BINARY
--o PATH                           #TEST_BINARY's location.
-                                  #Def: BINARY.test
--json                             #Prints test results as JSON
--ANY_GO_RUN_FLAG                  #Note: -i implied -c
-
--bench [Benchmark]NAME            #Run a benchmark function
-
--cpu NUM                          #Set GOMAXPROCS
-
-testdata/**                       #Always ignored, i.e. good for fixtures
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:          TEST FILES           :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-TEST FILES ==>                    #Must export Test*|Example*|Benchmark*()
-                                  #Each FUNC is run in its own goroutine
-
-TestNAME(*testing.T)              #Test function
-                                  #If any test assertion fails, exit code 1
-
-Example[VARR][_SUFFIX]()          #Example function
-                                  #Can become a test function (instead of documenting) by adding a comment asserting stdout equals a specific STR
-                                  #Documented by godoc:
-                                  #  - VARR should be exported variable name, _-separated
-                                  #     - empty if whole package
-                                  #  - appears next to VARR documentation
-                                  #  - can append any SUFFIX
-                                  #  - if only one Example function, and there are some package scope declaration, the whole
-                                  #    file is shown, not only function
-                                  #     - i.e. full file example
-// Output: [...]                  #... is expected stdout
-                                  #Can be multiline, omitting "Output:"
-// Unordered output: [...]        #Same but line order is not significant
-
-BenchmarkNAME(*testing.B)         #Benchmark function
-                                  #Only run when -bench CLI flag
-                                  #Prints GOOS, GOARCH, MODULE_PATH, NAME
-                                  #Runs for one minute then prints:
-                                  #  - number of iterations
-                                  #  - average iteration speed
-                                  #  - number of goroutines
-                                  #Can also use test assertions, and behave like a test function
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:            TESTING            :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-import "testing"                  #
-
-testing.T                         #Test function utilities
-T.Fail()                          #Mark test as failed. Keep current FUNC|goroutine going.
-T.Failed()->BOOL                  #
-T.FailNow()                       #Run T.Fail(), then exit current FUNC|goroutine (not others)
-
-T.SkipNow()                       #Mark test as skipped, then exit current FUNC|goroutine (not others)
-T.Skipped()->BOOL                 #
-
-T.Log[f](...)                     #Similar to fmt.Println|Printf(...) except more test-friendly:
-                                  #  - only printed on test failure or if -v CLI flag
-T.Error[f](...)                   #Run T.Log[f](...) then t.Fail()
-T.Fatal[f](...)                   #Run T.Log[f](...) then t.FailNow()
-T.Skip[f](...)                    #Run T.Log[f](...) then t.SkipNow()
-
-T.Cleanup(FUNC())                 #Run FUNC() when test exits.
-                                  #Last added is called first.
-
-T.Name()->"TestNAME"              #
-
-T.Helper()                        #Make function as test helper, i.e. file|line information not printed
-
-T.Parallel()                      #Mark as parallel test, i.e. run in parallel with other parallel tests
-
-T.Run("NAME2", FUNC(*T))->BOOL    #Runs a sub-test, for nesting|grouping tests.
-                                  #Done in a goroutine.
-                                  #Blocks until complete (unless parallel)
-                                  #BOOL is whether failed
-                                  #  - if parallel, until T.Parallel() was called
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:           BENCHMARK           :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-testing.B                         #Benchmark utilities
-
-B.*                               #All T.* are available
-                                  #  - exception: logs are always printed
-testing.TB                        #INTERFACE with methods common to T and B
-
-B.N                               #Max iteration INT to run in loops
-                                  #For example: for i := 0; i < b.N; i++ {...}
-
-B.ResetTimer()                    #To do after setup code, so the setup does not add to the benchmark
-B.StopTimer()                     #Pause timer
-B.StartTimer()                    #Re-start timer
-
-B.ReportAllocs()                  #Like -test.benchmem, but only for this function
-
-B.SetBytes(INT64)                 #Report that the current test read or write INT64 bytes by current iteration, to benchmark I/O
-                                  #This will be printed as MB/s in the test output.
-B.ReportMetric(FLOAT64, "UNIT")   #Report "FLOAT64 UNIT" in test output
-                                  #Must be called only once per FUNC
-                                  #Goal is to do own measuring and report it
-                                  #If "UNIT" is already reported by go test, override it
-
-B.SetParallelism(INT)             #Increase the number of max goroutines to INT * GOMAXPROCS
-B.RunParallel(FUNC(*PB))          #Creates GOMAXPROCS goroutines and run all goroutines in parallel.
-                                  #I.e. benchmarks in parallel instead of serially
-                                  #Blocks until complete
-PB.Next()->BOOL                   #Mark start of a new iteration
-                                  #Returns false if last iteration.
-                                  #To use in: for PB.Next() {...}
