--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -6,9 +6,13 @@
 
 TODO:
   - commands:
-     - https://golang.org/cmd/go: go test
+     - go test:
+        - https://golang.org/pkg/runtime/
+        - go tool pprof
+        - https://blog.learngoprogramming.com/a-visual-guide-to-golang-memory-allocator-from-ground-up-e132258453ed
         - https://golang.org/cmd/go/#hdr-Testing_flags
-        - https://golang.org/pkg/testing
+        - https://golang.org/pkg/testing/quick/
+        - break down go_testing file into several
      - https://golang.org/doc/cmd
      - https://golang.org/cmd/
         - after doing go tool asm: move doc of go build -asmflags|toolexec
