--- a/Languages/Go/go_standard_library.go.txt
+++ b/Languages/Go/go_standard_library.go.txt
@@ -7,12 +7,14 @@
 
 VERSION ==>                       #See Go language
 
-LANGUAGE SPEC ==>                 #The following are part of the language spec, so described in Go language doc:
+DOCUMENTED ELSEWHERE ==>          #In go language (because part of language spec):
                                   #  - unsafe
                                   #  - runtime.Error
-
-DOCUMENTED ELSEWHERE ==>          #In go CLI:
+                                  #In go CLI:
                                   #  - runtime.GOOS|GOARCH|Compiler
+                                  #In go testing:
+                                  #  - testing
+                                  #  - runtime.[Read]MemStats|GC
 
 
                                              /=+===============================+=\
