no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -8,7 +8,7 @@
 ALTERNATIVES ==>                  #  - ESTree (def): most supported
                                   #  - Shift: less supported
 
-VERSION ==>                       #Last check 30/05/2020
+VERSION ==>                       #Last check 02/08/2020
                                   #JavaScript AST standard
 
 TYPESCRIPT/FLOW ==>               #See TSESTree doc
@@ -168,7 +168,7 @@ OBJ?.[VAL]                   stmbl#  - optional BOOL
                             (blt)##Child of MEMBER_EXPRESSION, type 'OptionalMemberExpression'
                             (blt)##  - optional BOOL
                                  ##Child of EXPR, type 'ChainExpression'
-                                 ##  - expression MEMBER_EXPRESSION|CALL_EXPRESSION:
+                                 ##  - expression MEMBER_EXPRESSION|CALL_EXPRESSION|SLICE_EXPRESSION
                               (m)##Child of EXPR, type 'OptionalExpression'
                               (m)##  - object EXPR
                               (m)##  - chain OPTIONAL_CHAIN (type 'OptionalChain'):
@@ -409,6 +409,11 @@ TAG`...`                          #Child of EXPR, type 'TaggedTemplateExpression
 
 #[VAL...]                         #Child of EXPR, type 'TupleExpression':
                                   #  - elements EXPR2|SPREAD_ELEMENT_ARR
+
+ARR[...:...]                      #Child of EXPR, type 'SliceExpression':
+                                  #  - object EXPR (ARR)
+                                  #  [- lower EXPR2]
+                                  #  [- upper EXPR2]
 
 
                                              /=+===============================+=\
