no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -198,6 +198,9 @@ CONF.parserOpts                   #OPTS to pass to @babel/parser
 CONF.generatorOpts                #OPTS to pass to @babel/generator
 CONF.wrapPluginVisitorMethod      #Wrap parser visitor method (see online doc)
 
+CONF.showConfig                   #BOOL (def: false). Prints config
+CONF.showConfigForPath            #Config 'PATH' (def: ENVVAR BABEL_SHOW_CONFIG_FOR_PATH, or none) to limit CONF.showConfig
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -569,6 +572,12 @@ proposal-dynamic-import           #import(...)
 ES2021 ==>                        #
 syntax-numeric-separator
 proposal-numeric-separator        #NNN_NNN_NNN
+syntax-export-namespace-from
+proposal-export-namespace-from    #export * as VAR2 from 'MDL'
+syntax-logical-assignment-
+ operators
+proposal-logical-assignment
+ -operators                       #||= &&=
 
 STAGE 3 ==>                       #
 syntax-class-properties
@@ -595,12 +604,6 @@ syntax-do-expressions
 proposal-do-expressions           #do { ... }
 syntax-export-default-from
 proposal-export-default-from      #export DEFAULT_VAL from 'MDL'
-syntax-export-namespace-from
-proposal-export-namespace-from    #export * as VAR2 from 'MDL'
-syntax-logical-assignment-
- operators
-proposal-logical-assignment
- -operators                       #||= &&=
 syntax-optional-chaining
 proposal-optional-chaining        #OBJ?.PROP
 syntax-pipeline-operator
