--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -349,15 +349,15 @@ STR|BOOL|NUM|BIGINT|null|REGEXP  b#Child of EXPR, type 'Literal':
  |BIGDECIMAL                     b#
                                  b#  - value STR|BOOL|NUM|null|REGEXP
                                sbt#    or BIGINT
-                                ()#    or BIGDECIMAL
+                               (b)#    or BIGDECIMAL
                                  b#  (REGEXP only)
                                  b#  - regex:
                                  b#     - pattern STR
                                  b#     - flags STR
                                sbl#  (BIGINT only)
                                sbl#  - bigint STR (without 'n')
-                                ()#  (BIGDECIMAL only)
-                                ()#  - decimal STR
+                               (b)#  (BIGDECIMAL only)
+                               (b)#  - decimal STR
                               (b)##Type 'String|Boolean|Numeric|Null|RegExpLiteral':
                               (b)##  - value STR|BOOL|NUM|null|REGEXP|BIGINT
                               (b)##  (not BOOL|null)
