no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #14.6.0 (current), 13.14.0 (current), 12.18.3 (active LTS), 10.22.0 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #14.7.0 (current), 13.14.0 (current), 12.18.3 (active LTS), 10.22.0 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -3694,7 +3694,7 @@ FRAME                                        12*#OBJ:
                                              12*#  - timeDeltas NUM_ARR (in ns):
                                              12*#     - time between each sample
                                              12*#     - should be approximately same as --cpu-prof-interval
---cpu-prof-dir 'DIR'                         12*#Def: PWD
+--cpu-prof-dir 'DIR'                         12*#Def: --diagnostic-dir
 --cpu-prof-name STR                          12*#Def: 'CPU.YYYYMMDD.HHMMSS.PID.TID.COUNTER.cpuprofile'
 --cpu-prof-interval NUM                       12*#NUM (in microsecs). Def: 1000
 
@@ -3711,9 +3711,12 @@ FRAME                                        12*#OBJ:
                                              12*#     - ordinal NUM (index)
                                              12*#     - size NUM (in bytes)
                                              12*#FRAME: functionName STR, scriptId STR
---heap-prof-dir 'DIR'                        12*#Def: PWD
+--heap-prof-dir 'DIR'                        12*#Def: --diagnostic-dir
 --heap-prof-name STR                         12*#Def: 'Heap.YYYYMMDD.HHMMSS.PID.TID.COUNTER.heapprofile'
 --heap-prof-interval NUM                     12*#NUM (in bytes). Def: 512KB
+
+--diagnostic-dir 'DIR'                       14*#Default value of --cpu-prof-dir|heap-prof-dir|redirect-warnings
+                                             14*#Def: PWD
 
 
                                              /=+===============================+=\
