no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -299,16 +299,30 @@ ENVVAR GOMOD                      #Absolute "PATH" to current go.mod.
 
 go list IMPORT_PATHS              #Prints all PACKAGEs, one per line
 
+-deps                             #Recursive over dependencies, including standard library
+                                  #Print dependency first
+
+-f TEMPLATE                       #Of JSON output
+                                  #Def: '{{.ImportPath}}'
+                                  #Can use template FUNC join (strings.Join())
 -json                             #Prints as JSON OBJ:
                                   #  (required)
-                                  #  Dir 'PATH': absolute path to package's DIR
-                                  #  Root 'PATH': module's root DIR
                                   #  ImportPath 'IMPORT_PATH'
                                   #  Name 'PACKAGE'
-                                  #  Target 'GOBIN/BINARY' or (standard library) GOROOT/pkg/GOOS_GOARCH/**/*.a
+                                  #  Dir 'PATH': absolute path to package's DIR
+                                  #  Root 'PATH': module's root DIR
                                   #  Match STR_ARR: CLI arguments in IMPORT_PATHS that matched it
+                                  #  Module *MODULE: package's module
+                                  #  Module.Path 'MODULE_PATH'
+                                  #  Module.Dir 'PATH'
+                                  #  Module.GoMod 'PATH': of go.mod
+                                  #  Module.GoVersion 'VERSION': in go.mod
                                   #
                                   #  (optional)
+                                  #  Module.Version 'MODULE_VERSION'
+                                  #  Module.Time 'YYYY-MM-DDTHH:MM:SSZ'
+                                  #  Module.Main BOOL
+                                  #  Target 'GOBIN/BINARY' or (standard library) GOROOT/pkg/GOOS_GOARCH/**/*.a
                                   #  ImportComment 'IMPORT_PATH': from import comment
                                   #  Doc STR: documentation comment
                                   #  Shlib 'PATH': shared library when using -linkshared
@@ -319,26 +333,16 @@ go list IMPORT_PATHS              #Prints all PACKAGEs, one per line
                                   #  ConflictDir 'PATH': shadows another PACKAGE in GOPATH
                                   #  BinaryOnly BOOL: binary-only PACKAGE (deprecated)
                                   #  ForTest STR: only for use in test
-                                  #  DepOnly BOOL
+                                  #  DepOnly BOOL: whether it is a dependency, printed by -deps flag
                                   #  Cgo*: CGO settings
-                                  #
-                                  #  Imports 'IMPORT_PATH'_ARR: all import statements, after resolution (e.g. due to vendor/...)
-                                  #  [X]TestImports 'IMPORT_PATH'_ARR: all import statements, after resolution in *_test.go inside|outside PACKAGE
-                                  #  ImportMap MAP[STR]STR: key|value is import statement before|after resolution
-                                  #  Deps 'IMPORT_PATH'_ARR: all dependencies, recursively
-                                  #  Export 'PATH': binary file in GOCACHE containing information about PACKAGE's exports. Requires -export flag
-                                  #
-                                  #  Module *MODULE: package's module
-                                  #  Module.Path 'MODULE_PATH'
-                                  #  Module.Dir 'PATH'
-                                  #  Module.Main BOOL
-                                  #  Module.GoMod 'PATH': of go.mod
-                                  #  Module.GoVersion 'VERSION': in go.mod
                                   #
                                   #  GoFiles 'PATH'_ARR: *.go, except ones below
                                   #  [X]TestGoFiles 'PATH'_ARR: *_test.go inside|outside PACKAGE
                                   #  CgoFiles 'PATH'_ARR: *.go importing "C"
-                                  #  CompiledGoFiles 'PATH'_ARR: *.go sent to compiled. Requires -compiled flag
+                                  #  CompiledGoFiles 'PATH'_ARR:
+                                  #    - *.go sent to compiled
+                                  #    - is GoFiles + (after processing) CgoFiles|SwigFiles
+                                  #    - Requires -compiled flag
                                   #  IgnoredGoFiles 'PATH'_ARR: ignored *.go
                                   #  CFiles 'PATH'_ARR: *.c
                                   #  CXXFiles 'PATH'_ARR: *.cc|cxx|cpp
@@ -351,11 +355,31 @@ go list IMPORT_PATHS              #Prints all PACKAGEs, one per line
                                   #  SysoFiles 'PATH'_ARR: *.syso
                                   #
                                   #  Incomplete BOOL: error while loading information
-                                  #  Error *PACKAGE_ERROR: error in package
+                                  #  Error *PACKAGE_ERROR:
+                                  #   - error in package
+                                  #   - requires -e flag (otherwise, prints error on stderr)
                                   #  Error.Err 'MESSAGE'
                                   #  Error.ImportStack 'IMPORT_PATH'_ARR: stack trace
                                   #  Error.Pos 'FILE:LINE:COL'
                                   #  DepsErrors *PACKAGE_ERROR_ARR: errors in dependencies
+                                  #
+                                  #  (unless -find flag)
+                                  #  Imports 'IMPORT_PATH'_ARR: all import statements, after resolution (e.g. due to vendor/...)
+                                  #  [X]TestImports 'IMPORT_PATH'_ARR: all import statements, after resolution in *_test.go inside|outside PACKAGE
+                                  #  ImportMap MAP[STR]STR: key|value is import statement before|after resolution
+                                  #  Deps 'IMPORT_PATH'_ARR: all dependencies, recursively
+                                  #  Export 'PATH':
+                                  #   - binary file in GOCACHE containing information about PACKAGE's exports
+                                  #   - requires -export flag
+                                  #
+                                  #  (only with -f flag)
+                                  #  context CONTEXT
+                                  #  context.GOARCH|GOOS|GOPATH|GOROOT|CgoEnabled STR: like ENVVARs
+                                  #  context.BuildTags STR_ARR: +build tags
+                                  #  context.UseAllFiles BOOL: disregard ignored filenames or +build tags
+                                  #  context.Compiler 'gc|gccgo'
+                                  #  context.ReleaseTags 'goVERSION'_ARR
+                                  #  context.InstallSuffix STR
 
 
                                              /=+===============================+=\
