--- a/Languages/Go/go_templates.txt
+++ b/Languages/Go/go_templates.txt
@@ -16,6 +16,9 @@ import "text/template"            #Input is UTF-8 string + struct OBJ
                                   #Is a string, which can contain {{...}} markers, which are substituted
                                   #Can pipe with |
 
+TEMPLATE                          #Anything in-between {{...}}
+                                  #Often used as -f CLI flag of commands exposing a -json CLI flag for output
+
 {{VAL}}                           #STR, CHAR, BOOL, NUM, nil
 {{.}}                             #OBJ
 {{.VARR}}                         #OBJ.VARR
