no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -301,6 +301,12 @@ go list IMPORT_PATHS              #Prints all PACKAGEs, one per line
 
 -deps                             #Recursive over dependencies, including standard library
                                   #Print dependency first
+-test                             #Include test binaries
+
+-m                                #On MODULEs instead
+                                  #JSON OBJ is only OBJ.Module
+                                  #Def -f flag includes many fields: Path|Version|Replace|Update
+                                  #Cannot use -deps, but can use "all" as argument instead
 
 -f TEMPLATE                       #Of JSON output
                                   #Def: '{{.ImportPath}}'
@@ -320,8 +326,14 @@ go list IMPORT_PATHS              #Prints all PACKAGEs, one per line
                                   #
                                   #  (optional)
                                   #  Module.Version 'MODULE_VERSION'
-                                  #  Module.Time 'YYYY-MM-DDTHH:MM:SSZ'
-                                  #  Module.Main BOOL
+                                  #  Module.Versions 'MODULE_VERSION'_ARR: sorted. Only with -versions flag
+                                  #  Module.Time 'YYYY-MM-DDTHH:MM:SSZ': ctime
+                                  #  Module.Main BOOL: current directory's MODULE
+                                  #  Module.Indirect BOOL: go.mod //indirect comment
+                                  #  Module.Replace *MODULE: go.mod "replace" directive
+                                  #  Module.Update *MODULE:
+                                  #   - available update
+                                  #   - only with -u flag
                                   #  Target 'GOBIN/BINARY' or (standard library) GOROOT/pkg/GOOS_GOARCH/**/*.a
                                   #  ImportComment 'IMPORT_PATH': from import comment
                                   #  Doc STR: documentation comment
@@ -336,6 +348,7 @@ go list IMPORT_PATHS              #Prints all PACKAGEs, one per line
                                   #  DepOnly BOOL: whether it is a dependency, printed by -deps flag
                                   #  Cgo*: CGO settings
                                   #
+                                  #  (those paths are relative to Dir)
                                   #  GoFiles 'PATH'_ARR: *.go, except ones below
                                   #  [X]TestGoFiles 'PATH'_ARR: *_test.go inside|outside PACKAGE
                                   #  CgoFiles 'PATH'_ARR: *.go importing "C"
@@ -355,13 +368,14 @@ go list IMPORT_PATHS              #Prints all PACKAGEs, one per line
                                   #  SysoFiles 'PATH'_ARR: *.syso
                                   #
                                   #  Incomplete BOOL: error while loading information
-                                  #  Error *PACKAGE_ERROR:
-                                  #   - error in package
-                                  #   - requires -e flag (otherwise, prints error on stderr)
+                                  #  (requires -e flag, otherwise prints error on stderr)
+                                  #  Error *PACKAGE_ERROR
                                   #  Error.Err 'MESSAGE'
                                   #  Error.ImportStack 'IMPORT_PATH'_ARR: stack trace
                                   #  Error.Pos 'FILE:LINE:COL'
                                   #  DepsErrors *PACKAGE_ERROR_ARR: errors in dependencies
+                                  #  Module.Error *MODULE_ERROR
+                                  #  Module.Error.Err 'MESSAGE'
                                   #
                                   #  (unless -find flag)
                                   #  Imports 'IMPORT_PATH'_ARR: all import statements, after resolution (e.g. due to vendor/...)
